[package]
name = "berus"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
url = "2.4"                                                      # For URL parsing
native-tls = "0.2"                                               # For HTTPS/TLS

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3
