[package]
name = "berus"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
url = "2.4"                                                      # For URL parsing
reqwest = { version = "0.12.15", features = ["blocking"] }
anyhow = "1.0.98"
cpal = "0.15.3"
rodio = "0.20"
egui_flex = "0.3.0"
egui_inbox = "0.8.0"
egui-probe = "0.8.2"
egui_material_icons = "0.3.0"
egui_suspense = "0.8.0"

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3
